--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ hyper = "0.14.20"
 console-subscriber = "0.2.0"
 fast-paillier = "0.1.0"
 rug = { version = "1.21", features = [ "integer", "rand", ] }
+primitive-types = { version = "0.12.2" }
