--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ tower-http = { version = "0.4.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["full"] }
 hyper = "0.14.20"
 console-subscriber = "0.2.0"
-fast-paillier = "0.1.0"
 rug = { version = "1.21", features = [ "integer", "rand", ] }
 primitive-types = { version = "0.12.2" }
+dotenv = "0.15.0"
