--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,6 @@ serde_json = { version = "1" }
 tower-http = { version = "0.4.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["full"] }
 hyper = "0.14.20"
-rug = { version = "1.21", features = [ "integer", "rand", ] }
 primitive-types = { version = "0.12.2" }
 dotenv = "0.15.0"
+rand = "0.8.5"
