--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-jsonrpsee =  { version = "0.20.3", features = ["server", "macros", ]}
+jsonrpsee = { version = "0.20.3", features = [
+    "server",
+    "macros",
+    "http-client",
+] }
 anyhow = "1"
 futures = "0.3"
 tokio = { version = "1.16", features = ["full"] }
