--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ hyper = "0.14.20"
 primitive-types = { version = "0.12.2" }
 dotenv = "0.15.0"
 rand = "0.8.5"
+starknet-crypto = "0.6.1"
+starknet = "0.8.0"
+url = "2.5.0"
+
